[package]
name = "mqtop"
version = "0.4.0"
edition = "2021"
description = "High-performance MQTT explorer TUI - like htop for your broker"
authors = ["Sourceful Energy"]

[dependencies]
# MQTT client
rumqttc = "0.24"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Config & serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"

# CLI args
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Fuzzy search
fuzzy-matcher = "0.3"

# Directories
dirs = "5"

# Clipboard
arboard = "3"

# TLS support (match rumqttc's versions)
rustls-pemfile = "2"
rustls-native-certs = "0.7"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.13"
assert_matches = "1.5"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[test]]
name = "integration"
path = "tests/integration.rs"
